--- a/src/main/resources/com/accesa/project/controllers/StartView.fxml
+++ b/src/main/resources/com/accesa/project/controllers/StartView.fxml
@@ -75,4 +75,14 @@
          <Font name="Helvetica" size="13.0" />
       </font>
    </Label>
+    <VBox alignment="CENTER" layoutX="228.0" layoutY="408.0" prefHeight="67.0" prefWidth="275.0">
+        <Label fx:id="tipsLabel" prefHeight="67.0" prefWidth="235.0" style="-fx-text-fill: WHITE;" textAlignment="CENTER" wrapText="true">
+            <font>
+                <Font name="Helvetica" size="13.0" />
+            </font>
+            <VBox.margin>
+                <Insets left="10.0" right="20.0" />
+            </VBox.margin>
+        </Label>
+    </VBox>
 </AnchorPane>
